# orpc-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: release.yml  test.yml
crates/orpc/: CHANGELOG.md  Cargo.toml  README.md
crates/orpc-axum/: CHANGELOG.md  Cargo.toml  README.md
crates/orpc-axum/src/: lib.rs
crates/orpc-axum/tests/: integration.rs
crates/orpc-client/: Cargo.toml  README.md
crates/orpc-client/src/: client.rs  envelope.rs  error.rs  lib.rs  link.rs  rpc_link.rs  sse.rs
crates/orpc-client/tests/: service_macro.rs
crates/orpc-macros/: Cargo.toml  README.md
crates/orpc-macros/src/: lib.rs  service.rs
crates/orpc-procedure/: CHANGELOG.md  Cargo.toml  README.md
crates/orpc-procedure/src/: error.rs  input.rs  lib.rs  output.rs  procedure.rs  route.rs  schema.rs  state.rs  stream.rs
crates/orpc-procedure/tests/: integration.rs
crates/orpc-server/: CHANGELOG.md  Cargo.toml  README.md
crates/orpc-server/src/: lib.rs  meta.rs  openapi.rs  rpc.rs  sse.rs
crates/orpc-specta/: CHANGELOG.md  Cargo.toml  README.md
crates/orpc-specta/src/: export.rs  lib.rs  schema.rs
crates/orpc-tauri/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/orpc-tauri/permissions/: default.toml
crates/orpc-tauri/permissions/autogenerated/: reference.md
crates/orpc-tauri/permissions/autogenerated/commands/: handle_rpc_call.toml  handle_rpc_subscription.toml
crates/orpc-tauri/permissions/schemas/: schema.json
crates/orpc-tauri/src/: lib.rs
crates/orpc/src/: builder.rs  context.rs  contract.rs  error.rs  file.rs  handler.rs  implement.rs  lib.rs  middleware.rs  procedure.rs  router.rs  schema.rs
crates/orpc/tests/: contract.rs  integration.rs
examples/axum-react/: README.md
examples/axum-react/client/: index.html  package.json  vite.config.ts
examples/axum-react/client/src/: App.tsx  rpc.ts
examples/axum-react/server/: Cargo.toml
examples/axum-react/server/src/: main.rs
examples/tauri-app/: README.md  package.json
examples/tauri-app/src/: App.tsx  bindings.ts  main.tsx  rpc.ts
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: orpc.ts
