[workspace]
resolver = "2"
members = ["crates/*", "examples/axum-react/server", "examples/tauri-app/src-tauri"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/ahonn/orpc-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.4"
futures-core = "0.3"
thiserror = "2"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }
futures-util = "0.3"
orpc-procedure = { path = "crates/orpc-procedure", version = "0.1.1" }
orpc = { path = "crates/orpc", version = "0.1.1" }
orpc-server = { path = "crates/orpc-server", version = "0.1.1" }
http = "1"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
serde_urlencoded = "0.7"
specta = { version = "=2.0.0-rc.23", features = ["derive"] }
specta-typescript = "0.0.10"
specta-serde = "0.0.10"
tauri = { version = "2", default-features = false }
