[package]
name = "orpc-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orpc = { workspace = true }
orpc-procedure = { workspace = true }
orpc-server = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
pin-project-lite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
tower = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
