[package]
name = "orpc-client"
description = "HTTP client for orpc-rs RPC servers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orpc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-core = { workspace = true }
reqwest = { workspace = true }
pin-project-lite = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
futures-util = { workspace = true }
