[package]
name = "orpc-procedure"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-erased execution engine for orpc-rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
erased-serde = { workspace = true }
futures-core = { workspace = true }
thiserror = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
