[package]
name = "orpc-server"
description = "Wire protocol implementation for orpc-rs (RPC, SSE, OpenAPI)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orpc = { workspace = true }
orpc-procedure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
serde_urlencoded = { workspace = true }
serde_qs = "1.1.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
