[package]
name = "orpc-specta"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orpc = { workspace = true }
orpc-procedure = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
specta-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
