[package]
name = "orpc-specta"
description = "TypeScript type generation for orpc-rs via specta"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orpc = { workspace = true }
orpc-procedure = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
specta-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
