[package]
name = "tauri-plugin-orpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
links = "tauri-plugin-orpc"

[dependencies]
orpc = { workspace = true }
orpc-procedure = { workspace = true }
orpc-server = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
