[package]
name = "orpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-safe RPC framework for Rust, inspired by oRPC"

[dependencies]
orpc-procedure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
