[package]
name = "tauri-app"
version = "0.1.0"
description = "orpc-rs Tauri example"
edition = "2021"
publish = false

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
orpc = { workspace = true }
tauri-plugin-orpc = { path = "../../../crates/orpc-tauri" }
orpc-specta = { path = "../../../crates/orpc-specta" }
specta = { workspace = true }
tokio = { workspace = true }
async-stream = "0.3"
